// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Paccurate sends post request to cloud endpoint 1`] = `
{
  "boxTypeChoiceGoalUsed": "lowest-cost",
  "boxes": Any<Array>,
  "built": Any<String>,
  "host": "cloud.api.paccurate.io",
  "imageScaleStyleUsed": "fill",
  "itemSortReverseUsed": false,
  "itemSortUsed": "none",
  "leftovers": [],
  "lenBoxes": 3,
  "lenItems": 3,
  "lenLeftovers": 0,
  "lenUnits": 3,
  "packTime": Any<Number>,
  "packUuid": Any<String>,
  "renderTime": Any<Number>,
  "requestFingerprint": Any<String>,
  "responseFingerprint": Any<String>,
  "startedAt": Any<String>,
  "svgs": Any<Array>,
  "title": "Default",
  "totalCost": 3900,
  "totalTime": Any<Number>,
  "totalVolume": 1080,
  "totalVolumeNet": 594,
  "totalVolumeUsed": 594,
  "totalVolumeUtilization": 0.55,
  "totalWeight": 13.5,
  "usedKeyStem": Any<String>,
  "version": Any<String>,
}
`;

exports[`Paccurate sends post request to default endpoint 1`] = `
{
  "boxTypeChoiceGoalUsed": "lowest-cost",
  "boxes": Any<Array>,
  "built": Any<String>,
  "host": "api.paccurate.io",
  "imageScaleStyleUsed": "fill",
  "itemSortReverseUsed": false,
  "itemSortUsed": "none",
  "leftovers": [],
  "lenBoxes": 3,
  "lenItems": 3,
  "lenLeftovers": 0,
  "lenUnits": 3,
  "packTime": Any<Number>,
  "packUuid": Any<String>,
  "renderTime": Any<Number>,
  "requestFingerprint": Any<String>,
  "responseFingerprint": Any<String>,
  "startedAt": Any<String>,
  "svgs": Any<Array>,
  "title": "Default",
  "totalCost": 3900,
  "totalTime": Any<Number>,
  "totalVolume": 1080,
  "totalVolumeNet": 594,
  "totalVolumeUsed": 594,
  "totalVolumeUtilization": 0.55,
  "totalWeight": 13.5,
  "usedKeyStem": Any<String>,
  "version": Any<String>,
}
`;

exports[`pack sends post request to cloud endpoint 1`] = `
{
  "boxTypeChoiceGoalUsed": "lowest-cost",
  "boxes": Any<Array>,
  "built": Any<String>,
  "host": "cloud.api.paccurate.io",
  "imageScaleStyleUsed": "fill",
  "itemSortReverseUsed": false,
  "itemSortUsed": "none",
  "leftovers": [],
  "lenBoxes": 3,
  "lenItems": 3,
  "lenLeftovers": 0,
  "lenUnits": 3,
  "packTime": Any<Number>,
  "packUuid": Any<String>,
  "renderTime": Any<Number>,
  "requestFingerprint": Any<String>,
  "responseFingerprint": Any<String>,
  "startedAt": Any<String>,
  "svgs": Any<Array>,
  "title": "Default",
  "totalCost": 3900,
  "totalTime": Any<Number>,
  "totalVolume": 1080,
  "totalVolumeNet": 594,
  "totalVolumeUsed": 594,
  "totalVolumeUtilization": 0.55,
  "totalWeight": 13.5,
  "usedKeyStem": Any<String>,
  "version": Any<String>,
}
`;

exports[`pack sends post request to default endpoint 1`] = `
{
  "boxTypeChoiceGoalUsed": "lowest-cost",
  "boxes": Any<Array>,
  "built": Any<String>,
  "host": "api.paccurate.io",
  "imageScaleStyleUsed": "fill",
  "itemSortReverseUsed": false,
  "itemSortUsed": "none",
  "leftovers": [],
  "lenBoxes": 3,
  "lenItems": 3,
  "lenLeftovers": 0,
  "lenUnits": 3,
  "packTime": Any<Number>,
  "packUuid": Any<String>,
  "renderTime": Any<Number>,
  "requestFingerprint": Any<String>,
  "responseFingerprint": Any<String>,
  "startedAt": Any<String>,
  "svgs": Any<Array>,
  "title": "Default",
  "totalCost": 3900,
  "totalTime": Any<Number>,
  "totalVolume": 1080,
  "totalVolumeNet": 594,
  "totalVolumeUsed": 594,
  "totalVolumeUtilization": 0.55,
  "totalWeight": 13.5,
  "usedKeyStem": Any<String>,
  "version": Any<String>,
}
`;
